--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/*imported the colors ready to use the color theme with variable -name and variable-value*/
+
 :root {
   --charcoal: #424b54ff;
   --pewter-blue: #93a8acff;
@@ -8,56 +10,95 @@
 
 .header {
   border: solid 1px red;
+  margin: 20px auto;
 }
-
+/*contains the main nav links*/
 .nav-container {
   border: solid 1px red;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
+/* these are the clickable links which point to the id of the page*/
 .links {
   border: solid 1px red;
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  padding: 20px;
+  font-size: 20px;
+  align-items: center;
 }
-
+/* this is the container which holds everything from the header down right to the footer */
 .main-container {
   border: solid 1px red;
+  margin: 20px auto;
 }
 
-#About- Me {
+/* section id about with image and text */
+#About-me {
   border: solid 1px red;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
+.myphoto {
+  display: block;
+  margin-right: auto;
+  width: 500px;
+}
+#About-me,
+p,
+h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#About-me li {
+  display: flex;
+  flex-direction: row;
+  justify-content: ;
+}
+
+/* the first project card which will be different from the 6 others*/
 #Projects {
   border: solid 1px red;
 }
-
+/* the contact section which has the icons which are clickable links*/
 #Contact {
   border: solid 1px red;
 }
-
-.mainproject {
+/* the link which has the mian first project*/
+.main-project {
   border: solid 1px red;
 }
 
+/* the rest of the other projects which all have the same placeholder */
 .project {
   border: solid 1px red;
 }
-
+/* the other projects which all contain the clickable link */
 .flex-items {
   border: solid 1px red;
 }
-
+/* the header for each individual project to display its name */
 .project-h {
   border: solid 1px red;
 }
 
+/* contact details which contains the font awesome links */
 #Contact {
   border: solid 1px red;
 }
 
-.icons {
+/* to control each of the icons */
+.icon {
   border: solid 1px red;
 }
-
+/* the footer with authors details */
 .footer {
   border: solid 1px red;
 }
