--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,15 @@
 .main-container {
   border: solid 1px red;
   margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* section id about with image and text */
 #About-me {
   border: solid 1px red;
+  padding-right: 20px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -57,15 +61,23 @@ h3 {
   justify-content: center;
 }
 
-#About-me li {
+#About-me,
+li,
+h1,
+h2 {
   display: flex;
   flex-direction: row;
-  justify-content: ;
+  justify-content: center;
 }
 
 /* the first project card which will be different from the 6 others*/
 #Projects {
   border: solid 1px red;
+  object-fit: cover;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 /* the contact section which has the icons which are clickable links*/
 #Contact {
