--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,6 @@ p {
 }
 
 .icon {
-  position: relative;
   display: flex;
   flex-direction: row;
   margin: 10px;
@@ -178,3 +177,30 @@ p {
   padding: 10px;
   color: var(--charcoal);
 }
+
+@media screen and (max-width: 576px) {
+#About-me,
+#cards,
+#Contact {
+  flex-direction:column;
+  align-items:center;
+}
+
+ .header,
+ .nav-container,
+ .main-container,
+ .Projects,
+ .project,
+ .project-h,
+ .footer 
+ .links
+{
+  flex-direction: column;
+  align-items: center;
+ }
+
+}
+
+ 
+
+
