--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,8 @@ img {
   width: 100%;
   height: auto;
   align-items: center;
-  border;solid var(white);
+  border: #424b54ff, var(white);
 }
-
 #cards {
   display: flex;
   flex-wrap: wrap;
@@ -91,7 +90,6 @@ img {
   display: block;
   padding: 20px;
   width: 500px;
-
 }
 
 div #About-me,
@@ -179,28 +177,21 @@ p {
 }
 
 @media screen and (max-width: 576px) {
-#About-me,
-#cards,
-#Contact {
-  flex-direction:column;
-  align-items:center;
+  #About-me,
+  #cards,
+  #Contact {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header,
+  .nav-container,
+  .main-container,
+  .Projects,
+  .project,
+  .project-h,
+  .footer .links {
+    flex-direction: column;
+    align-items: center;
+  }
 }
-
- .header,
- .nav-container,
- .main-container,
- .Projects,
- .project,
- .project-h,
- .footer 
- .links
-{
-  flex-direction: column;
-  align-items: center;
- }
-
-}
-
- 
-
-
