--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   --copper-rose: #9b6a6cff;
 }
 
-/* the main font-family and colour of text on entire page*/
+/* the main font-family and color of text on entire page*/
 * color {
   color: var(--charcoal);
   font-family: "Barlow", sans-serif;
@@ -51,7 +51,7 @@ body {
   background-color: var(--charcoal);
   opacity: 0.7;
 }
-
+/* my photo */
 .Projects,
 img {
   width: 100%;
@@ -59,16 +59,17 @@ img {
   align-items: center;
   border: #424b54ff, var(white);
 }
-#cards {
+/* project cards *
+.wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   box-sizing: border-box;
   background-color: var(--pewter-blue);
-  box-sizing: border-box;
 }
 
-#cards img {
+/* images in cards */
+.wrapper img {
   width: 500px;
   height: 375px;
   margin: 10px;
@@ -138,12 +139,42 @@ li {
   height: auto;
 }
 
-/* the other projects images */
-#cards .project img {
+.newcard {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem;
+}
+
+.newcard img {
+  width: 500px;
+  height: 500px;
+  box-sizing: border-box;
+  background-color: var(--pewter-blue);
+  border: solid var(--white) 3px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+/* the other projects images 
+.wrapper .newcard img {
   display: inline;
   flex-direction: row;
-  justify-content: center;
+  align-items: center;
 }
+ .wrapper. newcard img {
+  display: flex;
+  flex-flow: column wrap;
+  height: 250px;
+}
+
+
+/* display: inline;
+  flex-direction: row;
+  align-items: center;
+}*/
 
 /* the title "My Projects" above the gallery */
 #my-projects {
@@ -232,7 +263,6 @@ p {
 /* media queries */
 @media screen and (max-width: 576px) {
   #About-me,
-  #cards,
   #Contact,
   #my-projects {
     flex-direction: column;
@@ -243,7 +273,8 @@ p {
   .nav-container,
   .main-container,
   .projects,
-  .project,
+  .wrapper,
+  .newcard,
   .project-h,
   .footer,
   .links {
