--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ img {
   padding: 20px;
 }
 
-.myphoto {
+.my-photo {
   width: 100%;
   height: 500px;
   object-fit: contain;
@@ -166,7 +166,6 @@ li {
   width: 500px;
   height: 500px;
   box-sizing: border-box;
-  /*background-color: var(--pewter-blue);*/
   border: solid var(--charcoal) 3px;
   display: flex;
   flex-direction: row;
@@ -196,8 +195,11 @@ li {
 h3,
 p {
   font-size: large;
-  /*
-  background-color: var(--pewter-blue);*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
 }
 
 /* contact details which contains the font awesome links */
@@ -271,8 +273,8 @@ p {
     align-items: center;
   }
 
-  .header .nav-container,
-  .main-container,
+  .header,
+  .nav-container,
   .projects,
   .wrapper,
   .new-card,
@@ -281,7 +283,8 @@ p {
   .links,
   .bio,
   .list,
-  .myphoto {
+  .profile-image,
+  .my-photo {
     flex-direction: column;
     align-items: center;
   }
